# api-docs.json
@@ -18,12 +18,43 @@
                 "summary": "Display a listing of the resource.",
                 "parameters": [
                     {
-                        "name": "par-name",
+                        "name": "category slug",
                         "in": "query",
-                        "description": "Parameter description",
+                        "description": "category slug",
                         "required": false,
                         "schema": {
                             "type": "string"
+                        }
+                    },
+                    {
+                        "name": "search_query",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "sort_mode",
+                        "in": "query",
+                        "description": "0 - price asc, 1 - price desc",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "filters",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "array",
+                                "items": {
+                                    "type": "string"
+                                }
+                            }
                         }
                     }
                 ],
@@ -154,12 +185,43 @@
                 "summary": "Display a listing of the resource.",
                 "parameters": [
                     {
-                        "name": "par-name",
+                        "name": "category slug",
                         "in": "query",
-                        "description": "Parameter description",
+                        "description": "category slug",
                         "required": false,
                         "schema": {
                             "type": "string"
+                        }
+                    },
+                    {
+                        "name": "search_query",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "sort_mode",
+                        "in": "query",
+                        "description": "0 - price asc, 1 - price desc",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "filters",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "array",
+                                "items": {
+                                    "type": "string"
+                                }
+                            }
                         }
                     }
                 ],
@@ -250,6 +312,37 @@
                                 },
                                 "active": {
                                     "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "Filter": {
+                "type": "object",
+                "properties": {
+                    "key": {
+                        "type": "string"
+                    },
+                    "name": {
+                        "type": "string"
+                    },
+                    "type": {
+                        "type": "integer"
+                    },
+                    "options": {
+                        "type": "array",
+                        "items": {
+                            "type": "object",
+                            "properties": {
+                                "value": {
+                                    "type": "string"
+                                },
+                                "isSelected": {
+                                    "type": "boolean"
+                                },
+                                "productCount": {
+                                    "type": "integer"
                                 }
                             }
                         }
@@ -418,6 +511,12 @@
                                 },
                                 "meta": {
                                     "$ref": "#\/components\/schemas\/PaginatorMeta"
+                                },
+                                "filters": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#\/components\/schemas\/Filter"
+                                    }
                                 }
                             }
                         }
