# app/OpenApi/Schemas/Products/FilterSchema.php
@@ -1,0 +1,34 @@
+<?php
+
+namespace App\OpenApi\Schemas\Products;
+
+use App\OpenApi\Schemas\CategorySchema;
+use GoldSpecDigital\ObjectOrientedOAS\Contracts\SchemaContract;
+use GoldSpecDigital\ObjectOrientedOAS\Objects\AllOf;
+use GoldSpecDigital\ObjectOrientedOAS\Objects\AnyOf;
+use GoldSpecDigital\ObjectOrientedOAS\Objects\Not;
+use GoldSpecDigital\ObjectOrientedOAS\Objects\OneOf;
+use GoldSpecDigital\ObjectOrientedOAS\Objects\Schema;
+use Vyuldashev\LaravelOpenApi\Contracts\Reusable;
+use Vyuldashev\LaravelOpenApi\Factories\SchemaFactory;
+
+class FilterSchema extends SchemaFactory implements Reusable
+{
+    /**
+     * @return AllOf|OneOf|AnyOf|Not|Schema
+     */
+    public function build(): SchemaContract
+    {
+        return Schema::object('Filter')
+            ->properties(
+                Schema::string('key'),
+                Schema::string('name'),
+                Schema::integer('type'),
+                Schema::array('options')->items(Schema::object()->properties(
+                    Schema::string('value'),
+                    Schema::boolean('isSelected'),
+                    Schema::integer('productCount')
+                )),
+            );
+    }
+}
